Update indexHOME.html-We just need to put a lil more things, like the names of the members in a list.

--- a/frontend/nginx/html/indexHOME.html
+++ b/frontend/nginx/html/indexHOME.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>ManageMaster, o seu gestor</title>
-    </head>
-    <body>
-        <h1>Controle tudo.</h1>
-        <img src=""/>
-        <a href=""
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ManageMaster | Sua Gestão Inteligente</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-    </body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">Manage<span>Master</span></div>
+            <ul class="nav-links">
+                <li><a href="#sobre">O que é o ManageMaster?</a></li>
+                <li><a href="#quem-somos">Quem somos nós?</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Domine suas finanças e seu estoque em um só lugar.</h1>
+            <p>A ferramenta definitiva para o controle total do seu negócio.</p>
+            <a href="#" class="btn-hero">Comece agora</a>
+        </div>
+    </section>
+
+    <section id="sobre" class="section dark-bg">
+        <div class="container">
+            <h2>O que é o ManageMaster?</h2>
+            <p>O ManageMaster é uma plataforma integrada de gestão focada em simplificar a vida do empreendedor. Unimos o controle de fluxo de caixa com a gestão de inventário em tempo real, permitindo que você tome decisões baseadas em dados.</p>
+        </div>
+    </section>
+
+    <section id="quem-somos" class="section white-bg">
+        <div class="container">
+            <h2>Quem somos nós?</h2>
+            <p>Somos uma equipe de especialistas apaixonados por eficiência. Nascemos da necessidade de pequenas e médias empresas que buscavam uma solução robusta e simples para o dia a dia.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2026 ManageMaster - Todos os direitos reservados.</p>
+    </footer>
+
+</body>
 </html>
