--- a/frontend/nginx/html/gerenciamento_de_estoque.html
+++ b/frontend/nginx/html/gerenciamento_de_estoque.html
@@ -262,7 +262,7 @@
                     <i class="fa-solid fa-user-plus"></i> Novo Fornecedor
                 </a>
 
-                <a href="index.html" class="btn-novo">
+                <a href="cadastro_de_produtos.html" class="btn-novo">
                     <i class="fa-solid fa-plus"></i> Novo Produto
                 </a>
             </div>
