--- a/frontend/nginx/html/gerenciamento_de_estoque.html
+++ b/frontend/nginx/html/gerenciamento_de_estoque.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="table-container">
-            <table>
+            <table id="tabelaEstoque">
                 <thead>
                     <tr>
                         <th>Produto</th>
@@ -58,7 +58,7 @@
                         <th>Preço Unit.</th>
                         <th>Qtd.</th>
                         <th>Total</th>
-                    </tr>
+                        <th style="width: 50px;"></th> </tr>
                 </thead>
                 <tbody>
                     <tr>
@@ -68,6 +68,11 @@
                         <td class="col-preco">R$ 49,90</td>
                         <td class="col-qtd">150</td>
                         <td class="col-total">R$ 7.485,00</td>
+                        <td>
+                            <button class="btn-delete" onclick="removerProduto(this)" title="Remover item">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Monitor LED 24"</td>
@@ -76,6 +81,11 @@
                         <td class="col-preco">R$ 850,00</td>
                         <td class="col-qtd">12</td>
                         <td class="col-total">R$ 10.200,00</td>
+                        <td>
+                            <button class="btn-delete" onclick="removerProduto(this)" title="Remover item">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Teclado Mecânico RGB</td>
@@ -84,6 +94,11 @@
                         <td class="col-preco">R$ 220,00</td>
                         <td class="col-qtd">45</td>
                         <td class="col-total">R$ 9.900,00</td>
+                        <td>
+                            <button class="btn-delete" onclick="removerProduto(this)" title="Remover item">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Calça Jeans Skinny</td>
@@ -92,6 +107,11 @@
                         <td class="col-preco">R$ 199,90</td>
                         <td class="col-qtd">30</td>
                         <td class="col-total">R$ 5.997,00</td>
+                        <td>
+                            <button class="btn-delete" onclick="removerProduto(this)" title="Remover item">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Mouse Sem Fio</td>
@@ -100,6 +120,11 @@
                         <td class="col-preco">R$ 89,90</td>
                         <td class="col-qtd">20</td>
                         <td class="col-total">R$ 1.798,00</td>
+                        <td>
+                            <button class="btn-delete" onclick="removerProduto(this)" title="Remover item">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Webcam Full HD</td>
@@ -108,11 +133,70 @@
                         <td class="col-preco">R$ 350,00</td>
                         <td class="col-qtd">8</td>
                         <td class="col-total">R$ 2.800,00</td>
+                        <td>
+                            <button class="btn-delete" onclick="removerProduto(this)" title="Remover item">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </main>
+
+    <script>
+        function removerProduto(botao) {
+            if (confirm("Tem certeza que deseja remover este produto do estoque?")) {
+                var linha = botao.closest("tr");
+                linha.remove();
+            }
+        }
+    </script>
+    </main>
+
+    <div id="modalConfirmacao" class="modal-overlay">
+        <div class="modal-box">
+            <div class="modal-icon">
+                <i class="fa-solid fa-triangle-exclamation"></i>
+            </div>
+            <h3>Remover Produto?</h3>
+            <p>Você tem certeza que deseja excluir este item do estoque? Essa ação não pode ser desfeita.</p>
+            
+            <div class="modal-actions">
+                <button class="btn-modal btn-cancelar" onclick="fecharModal()">Cancelar</button>
+                <button class="btn-modal btn-confirmar" onclick="confirmarExclusao()">Sim, Remover</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        let linhaParaRemover = null;
+
+        function removerProduto(botao) {
+            linhaParaRemover = botao.closest("tr");
+            
+            document.getElementById("modalConfirmacao").style.display = "flex";
+        }
+
+        function fecharModal() {
+            document.getElementById("modalConfirmacao").style.display = "none";
+            linhaParaRemover = null;
+        }
+
+        function confirmarExclusao() {
+            if (linhaParaRemover) {
+                linhaParaRemover.remove();
+                console.log("Produto removido com sucesso.");
+            }
+            fecharModal();
+        }
+
+        document.getElementById("modalConfirmacao").addEventListener("click", function(e) {
+            if (e.target === this) {
+                fecharModal();
+            }
+        });
+    </script>
 
 </body>
 </html>
