Update team section with new member information
Added team member details and updated description.

--- a/frontend/nginx/html/indexHOME.html
+++ b/frontend/nginx/html/indexHOME.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ManageMaster | Sua Gestão Inteligente</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,7 +37,35 @@
     <section id="quem-somos" class="section white-bg">
         <div class="container">
             <h2>Quem somos nós?</h2>
-            <p>Somos uma equipe de especialistas apaixonados por eficiência. Nascemos da necessidade de pequenas e médias empresas que buscavam uma solução robusta e simples para o dia a dia.</p>
+            <p>Somos uma equipe que busca ajudar pessoas a viverem os seus sonhos com os seus negócios.</p>
+            
+            <div class="team-grid">
+                <div class="team-member">
+                    <i class="fas fa-user-circle"></i>
+                    <h3>Bruno Almeida De Almeida</h3>
+                    <p>Graduando em Engenharia Da Computação-UFPA.</p>
+                </div>
+                <div class="team-member">
+                    <i class="fas fa-user-circle"></i>
+                    <h3>João Gabriel De Noronha Melter Fleury</h3>
+                    <p>Graduando em Engenharia Da Computação-UFPA.</p>
+                </div>
+                <div class="team-member">
+                    <i class="fas fa-user-circle"></i>
+                    <h3>Marcelo Chaves Arbage</h3>
+                    <p>Graduando em Engenharia Da Computação-UFPA.</p>
+                </div>
+                <div class="team-member">
+                    <i class="fas fa-user-circle"></i>
+                    <h3>Rafael Collares De Lima Rufino</h3>
+                    <p>Graduando em Engenharia Da Computação-UFPA.</p>
+                </div>    
+                <div class="team-member">
+                    <i class="fas fa-user-circle"></i>
+                    <h3>Thiago Pereira Araújo.</h3>
+                    <p>Descrição curta do cargo ou responsabilidade do membro no projeto.</p>
+                </div>
+            </div>
         </div>
     </section>
 
