--- a/frontend/nginx/html/estoque.html
+++ b/frontend/nginx/html/estoque.html
@@ -32,7 +32,7 @@
                 <a href="cadastro_fornecedor.html" class="btn-novo btn-outline">
                     <i class="fa-solid fa-user-plus"></i> Novo Fornecedor
                 </a>
-                <a href="cadastro_de_produtos.html" class="btn-novo">
+                <a href="cadastro_produtos.html" class="btn-novo">
                     <i class="fa-solid fa-plus"></i> Novo Produto
                 </a>
             </div>
