--- a/frontend/nginx/html/indexHOME.html
+++ b/frontend/nginx/html/indexHOME.html
@@ -6,7 +6,7 @@
     <title>ManageMaster | Sua Gestão Inteligente</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <link rel="stylesheet" href="HOME.css">
+    <link rel="stylesheet" href="../css/HOME.css">
 </head>
 <body>
 
