--- a/frontend/nginx/html/gerenciamento_de_estoque.html
+++ b/frontend/nginx/html/gerenciamento_de_estoque.html
@@ -42,16 +42,8 @@
                     <i class="fa-solid fa-user-plus"></i> Novo Fornecedor
                 </a>
 
-                <a href="categorias.html" class="btn-novo btn-outline">
-                    <i class="fa-solid fa-layer-group"></i> Categorias
-                </a>
-
-                <a href="cadastro_de_produtos.html" class="btn-novo btn-outline">
+                <a href="cadastro_de_produtos.html" class="btn-novo">
                     <i class="fa-solid fa-plus"></i> Novo Produto
-                </a>
-
-                <a href="#" class="btn-novo btn-outline">
-                    <i class="fa-solid fa-file-invoice"></i> Relatórios
                 </a>
             </div>
         </div>
@@ -71,9 +63,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Exemplo de Produto Roupas</td>
+                        <td>Exemplo</td>
                         <td><span class="badge bg-roupa">Roupas</span></td>
-                        <td>Fornecedor Exemplo</td>
+                        <td>Fornecedor Teste</td>
                         <td class="col-preco">R$ 100,00</td>
                         <td class="col-qtd">10</td>
                         <td class="col-total">R$ 1.000,00</td>
