--- a/frontend/nginx/html/gerenciamento_de_estoque.html
+++ b/frontend/nginx/html/gerenciamento_de_estoque.html
@@ -38,6 +38,10 @@
             </div>
             
             <div class="header-actions">
+                <a href="cadastro_categoria.html" class="btn-novo btn-outline">
+                    <i class="fa-solid fa-tags"></i> Nova Categoria
+                </a>
+
                 <a href="cadastro_fornecedor.html" class="btn-novo btn-outline">
                     <i class="fa-solid fa-user-plus"></i> Novo Fornecedor
                 </a>
@@ -58,29 +62,19 @@
                         <th>Preço Unit.</th>
                         <th>Qtd.</th>
                         <th>Total</th>
-                        <th style="width: 50px;"></th>
+                        <th style="width: 80px;">Ações</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="corpoTabela">
                     <tr>
-                        <td>Exemplo</td>
-                        <td><span class="badge bg-roupa">Roupas</span></td>
-                        <td>Fornecedor Teste</td>
-                        <td class="col-preco">R$ 100,00</td>
-                        <td class="col-qtd">10</td>
-                        <td class="col-total">R$ 1.000,00</td>
-                        <td>
-                            <button class="btn-delete" onclick="removerProduto(this)" title="Remover item">
-                                <i class="fa-solid fa-trash"></i>
-                            </button>
-                        </td>
+                        <td colspan="7" style="text-align: center;">Carregando produtos...</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </main>
 
-    <div id="modalConfirmacao" class="modal-overlay">
+    <div id="modalConfirmacao" class="modal-overlay" style="display: none;">
         <div class="modal-box">
             <div class="modal-icon">
                 <i class="fa-solid fa-triangle-exclamation"></i>
@@ -95,30 +89,7 @@
         </div>
     </div>
 
-    <script>
-        let linhaParaRemover = null;
-
-        function removerProduto(botao) {
-            linhaParaRemover = botao.closest("tr");
-            document.getElementById("modalConfirmacao").style.display = "flex";
-        }
-
-        function fecharModal() {
-            document.getElementById("modalConfirmacao").style.display = "none";
-            linhaParaRemover = null;
-        }
-
-        function confirmarExclusao() {
-            if (linhaParaRemover) {
-                linhaParaRemover.remove();
-            }
-            fecharModal();
-        }
-
-        document.getElementById("modalConfirmacao").addEventListener("click", function(e) {
-            if (e.target === this) { fecharModal(); }
-        });
-    </script>
+    <script src="../js/estoque.js"></script>
     
-    </body>
+</body>
 </html>
