-Atualizacao do gerenciamento de estoque.html para conectar com estoque.js -Atualizacao do estoque.js para integrar com o backend a parte de edicao de produto -Adicao de metodo @Put para atualizar -Atualizacao de ProdutoUpdateDTO para receber de forma correta os campos preenchidos no frontend

--- a/frontend/nginx/html/gerenciamento_de_estoque.html
+++ b/frontend/nginx/html/gerenciamento_de_estoque.html
@@ -56,7 +56,7 @@
             <table id="tabelaEstoque">
                 <thead>
                     <tr>
-                        <th>Produto</th>
+                        <th>ID</th> <th>Produto</th>
                         <th>Categoria</th>
                         <th>Fornecedor</th>
                         <th>Preço Unit.</th>
