updating the design

--- a/frontend/nginx/html/dashboard.html
+++ b/frontend/nginx/html/dashboard.html
@@ -10,6 +10,10 @@
 <body class="dash-body">
 
     <header class="dash-header">
+        <div class="nav-left">
+            <span class="user-badge"><i class="fas fa-chart-line"></i> Painel de gráficos </span>
+        </div>
+
         <div class="nav-logo-container">
             <div class="nav-sigma-icon">&#931;</div>
             <div class="nav-brand-stack">
@@ -19,7 +23,6 @@
         </div>
 
         <div class="nav-right">
-            <span class="user-badge"><i class="fas fa-user-shield"></i> Painel de gráficos</span>
             <a href="#" class="btn-refresh"><i class="fas fa-sync"></i> Atualizar Dados</a>
         </div>
     </header>
