--- a/frontend/nginx/html/gerenciamento_de_estoque.html
+++ b/frontend/nginx/html/gerenciamento_de_estoque.html
@@ -38,7 +38,7 @@
             </div>
             
             <div class="header-actions">
-                <a href="categoria.html" class="btn-novo btn-outline">
+                <a href="categorias.html" class="btn-novo btn-outline">
                     <i class="fa-solid fa-tags"></i> Nova Categoria
                 </a>
 
@@ -46,8 +46,12 @@
                     <i class="fa-solid fa-user-plus"></i> Novo Fornecedor
                 </a>
 
-                <a href="cadastro_de_produtos.html" class="btn-novo">
+                <a href="cadastro_de_produtos.html" class="btn-novo btn-outline">
                     <i class="fa-solid fa-plus"></i> Novo Produto
+                </a>
+
+                <a href="dashboard.html" class="btn-novo btn-outline">
+                    <i class="fa-solid fa-chart-pie"></i> Relatórios
                 </a>
             </div>
         </div>
@@ -67,7 +71,7 @@
                     </tr>
                 </thead>
                 <tbody id="corpoTabela">
-                    </tbody>
+                </tbody>
             </table>
         </div>
     </main>
