--- a/frontend/nginx/html/dashboard.html
+++ b/frontend/nginx/html/dashboard.html
@@ -12,6 +12,10 @@
     <header class="dash-header">
         <div class="nav-left">
             <span class="user-badge"><i class="fas fa-chart-line"></i> Painel de gráficos </span>
+            
+            <span class="divider-vertical"></span> <a href="#" class="btn-refresh" onclick="location.reload()">
+                <i class="fas fa-sync"></i> Atualizar
+            </a>
         </div>
 
         <div class="nav-logo-container">
@@ -23,7 +27,9 @@
         </div>
 
         <div class="nav-right">
-            <a href="#" class="btn-refresh"><i class="fas fa-sync"></i> Atualizar Dados</a>
+            <a href="compras.html" class="btn-destaque">
+                <i class="fas fa-cart-plus"></i> NOVA VENDA
+            </a>
         </div>
     </header>
 
@@ -34,7 +40,6 @@
         </div>
 
         <div class="dashboard-grid">
-            
             <div class="chart-box">
                 <div class="chart-header">
                     <h3><i class="fas fa-line-chart"></i> Evolução do Saldo</h3>
