--- a/frontend/nginx/html/gerenciamento_de_estoque.html
+++ b/frontend/nginx/html/gerenciamento_de_estoque.html
@@ -38,7 +38,7 @@
             </div>
             
             <div class="header-actions">
-                <a href="categorias.html" class="btn-novo btn-outline">
+                <a href="categoria.html" class="btn-novo btn-outline">
                     <i class="fa-solid fa-tags"></i> Nova Categoria
                 </a>
 
