--- a/frontend/nginx/html/compras.html
+++ b/frontend/nginx/html/compras.html
@@ -48,7 +48,10 @@
                         <div class="form-group">
                             <label for="produto-preco">Preço de Venda (R$)</label>
                             <input type="number" id="produto-preco" class="form-control" step="0.01" min="0">
-                            <small id="custo-ref" class="text-muted" style="display:none;">Custo: R$ 0.00</small>
+                            
+                            <small id="preco-unitario-ref" style="display:none; color: #64748b; margin-top: 5px; font-weight: 500;">
+                                Preço Unitário original: R$ 0,00
+                            </small>
                         </div>
                     </div>
                     
