--- a/frontend/nginx/html/dashboard.html
+++ b/frontend/nginx/html/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ManageMaster | Dashboard Administrativo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.plot.ly/plotly-2.29.1.min.js"></script>
     <link rel="stylesheet" href="../css/dashboard.css">
 </head>
 <body class="dash-body">
@@ -12,10 +13,6 @@
     <header class="dash-header">
         <div class="nav-left">
             <span class="user-badge"><i class="fas fa-chart-line"></i> Painel de gráficos </span>
-            
-            <span class="divider-vertical"></span> <a href="#" class="btn-refresh" onclick="location.reload()">
-                <i class="fas fa-sync"></i> Atualizar
-            </a>
         </div>
 
         <div class="nav-logo-container">
@@ -27,9 +24,7 @@
         </div>
 
         <div class="nav-right">
-            <a href="compras.html" class="btn-destaque">
-                <i class="fas fa-cart-plus"></i> NOVA VENDA
-            </a>
+            <a href="#" class="btn-refresh"><i class="fas fa-sync"></i> Atualizar Dados</a>
         </div>
     </header>
 
@@ -40,13 +35,14 @@
         </div>
 
         <div class="dashboard-grid">
+            
             <div class="chart-box">
                 <div class="chart-header">
                     <h3><i class="fas fa-line-chart"></i> Evolução do Saldo</h3>
                     <span class="badge">Série Temporal</span>
                 </div>
                 <div class="chart-area">
-                    <div class="placeholder-text">Aguardando plotagem Python...</div>
+                    <div id="chart-saldo" class="plotly-chart"></div>
                 </div>
             </div>
 
@@ -56,7 +52,7 @@
                     <span class="badge">Comparativo</span>
                 </div>
                 <div class="chart-area">
-                    <div class="placeholder-text">Aguardando plotagem Python...</div>
+                    <div id="chart-receitas-despesas" class="plotly-chart"></div>
                 </div>
             </div>
 
@@ -66,34 +62,33 @@
                     <span class="badge">Ranking</span>
                 </div>
                 <div class="chart-area">
-                    <div class="placeholder-text">Aguardando plotagem Python...</div>
+                    <div id="chart-produtos" class="plotly-chart"></div>
                 </div>
             </div>
 
             <div class="chart-box">
                 <div class="chart-header">
-                    <h3><i class="fas fa-boxes-stacked"></i> Alertas de Estoque e Vencimento</h3>
+                    <h3><i class="fas fa-clock"></i> Produtos Próximos do Vencimento</h3>
+                    <span class="badge">Risco de Perda</span>
                 </div>
-                <div class="inventory-display">
-                    <div class="stock-card critical">
-                        <i class="fas fa-exclamation-circle"></i>
-                        <div>
-                            <strong>Estoque Crítico</strong>
-                            <p>Itens abaixo do limite mínimo definido.</p>
-                        </div>
-                    </div>
-                    <div class="stock-card warning">
-                        <i class="fas fa-clock"></i>
-                        <div>
-                            <strong>Próximos ao Vencimento</strong>
-                            <p>Lotes com validade em menos de 7 dias.</p>
-                        </div>
-                    </div>
+                <div class="chart-area">
+                    <div id="chart-vencimento" class="plotly-chart"></div>
+                </div>
+            </div>
+
+            <div class="chart-box">
+                <div class="chart-header">
+                    <h3><i class="fas fa-boxes-stacked"></i> Nível de Estoque Crítico</h3>
+                    <span class="badge">Abaixo do Mínimo</span>
+                </div>
+                <div class="chart-area">
+                    <div id="chart-estoque" class="plotly-chart"></div>
                 </div>
             </div>
 
         </div>
     </main>
 
+    <script src="../js/dashboard.js"></script>
 </body>
 </html>
